src/assets/scss/sections/_gallery.scss
.gallery{
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(4, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  height: 100vh;

  &__content{
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    grid-column: 2 / 5;
    grid-row: 2 / 4;

    color: $color-white;

    &__tag{
      font-style: italic;
    }

    &__description{
      width: 90%;
    }

    &__tag, &__description{
      font-size: $f-size-sm;
      font-weight: 300;
    }

    &__title{
      font-size: $f-size-xxl;
      font-weight: 600;
    }

    &__date{
      font-size: $f-size-lg;
    }
  }

  &__collection{
    grid-column: 6 / 9;
    grid-row: 1 / end;

    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-row-gap: 32px;

    overflow: scroll;

    & > *:nth-child(odd) {
      grid-column: 2 / 4;
    }

    & > *:nth-child(even) {
      grid-column: 1 / 3;
    }

    &__art__image {
      transition: transform 0.3s ease-in-out;
      grid-column: span 2;
      width: 100%;
      cursor: pointer;

      &:hover {
        transform: scale(1.05);
        width: 100%;
      }
    }
  }


  &__content, &__collection{
    z-index: $z-index-medium;
  }

  @media only screen and (max-width : $breakpoint-md) {
    display: flex;
    flex-direction: column;

    &__content{
      padding: $spacing-md;
    }
  }
}

